--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "output"]
 	path = output
 	#url = https://github.com/ptyagicodecamp/ptyagicodecamp.github.io.git
-	url = git@github.com:ptyagicodecamp/ptyagicodecamp.github.io-src.git
+	url = git@github.com:ptyagicodecamp/ptyagicodecamp.github.io.git
